--- a/gb/19/12/25/n11744586.md
+++ b/gb/19/12/25/n11744586.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dueiwa2503/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dueiwa2503/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eonzy298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/eonzy298/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eonzy298/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eonzy298/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eonzy298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eonzy298/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中市闪废中火二机组许可证 台电启动行政救济</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/12/07f182dee657a15eb70468afc8fbc672-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/07f182dee657a15eb70468afc8fbc672-600x400.jpg" />
 <h6>台中市府开记者会，说明“废止中火两部机组操作许可证”细节。（黄玉燕／大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年12月25日讯】（大纪元记者黄玉燕台湾台中报导）台中市市长卢秀燕25日宣布，<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E5%8F%B0%E7%94%B5.md">台电</a>台中火力<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E5%8F%91%E7%94%B5%E5%8E%82.md">发电厂</a>违反“台中市<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%94%9F%E7%85%A4%E7%AE%A1%E5%88%B6.md">生煤管制</a>自治条例”，今年生煤使用量超标1104万公吨上限，市府将依法开罚900万元；且以三度违规情节重大为由，废止中火2、3号机组的操作许可证。对此，<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E5%8F%B0%E7%94%B5.md">台电</a>表示，将采取行政救济程序，也不排除未来诉讼胜诉，向台中市府提出停机期间的损害赔偿。</p>
-<figure id="attachment_11744588" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/e8423426d41d97768ed124d718d75e90.jpg"><img class="wp-image-11744588 size-large" src="http://i.epochtimes.com/assets/uploads/2019/12/e8423426d41d97768ed124d718d75e90-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">台中市府开记者会，说明“废止中火两部机组操作许可证”细节。（黄玉燕／大纪元）</figcaption></figure>
+<p>【大纪元2019年12月25日讯】（大纪元记者黄玉燕台湾台中报导）台中市市长卢秀燕25日宣布，<ahref="https://github.com/eonzy298/djy/blob/master/gb/tag/%E5%8F%B0%E7%94%B5.md#1">台电</a>台中火力<ahref="https://github.com/eonzy298/djy/blob/master/gb/tag/%E5%8F%91%E7%94%B5%E5%8E%82.md#1">发电厂</a>违反“台中市<ahref="https://github.com/eonzy298/djy/blob/master/gb/tag/%E7%94%9F%E7%85%A4%E7%AE%A1%E5%88%B6.md#1">生煤管制</a>自治条例”，今年生煤使用量超标1104万公吨上限，市府将依法开罚900万元；且以三度违规情节重大为由，废止中火2、3号机组的操作许可证。对此，<ahref="https://github.com/eonzy298/djy/blob/master/gb/tag/%E5%8F%B0%E7%94%B5.md#1">台电</a>表示，将采取行政救济程序，也不排除未来诉讼胜诉，向台中市府提出停机期间的损害赔偿。</p>
+<figure id="attachment_11744588" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/e8423426d41d97768ed124d718d75e90.jpg"><img class="wp-image-11744588 size-large" src="https://i.epochtimes.com/assets/uploads/2019/12/e8423426d41d97768ed124d718d75e90-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">台中市府开记者会，说明“废止中火两部机组操作许可证”细节。（黄玉燕／大纪元）</figcaption></figure>
 <p>卢秀燕于25日宣布：“废止中火两部机组操作许可证”，强调市府若不执法，就变成包庇。随后由环保局局长吴志超、法制局局长李善植、新闻局局长黄国玮出面召开记者会。</p>
-<p>吴志超指出，环保局12月23日第三度查获中火超量使用生煤，已属违规情节重大，将再处900万元罚缓。此外，针对老旧的2号机与3号机，连续三次被查获违规，将依法废止其固定<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E6%B1%A1%E6%9F%93%E6%BA%90.md">污染源</a>操作及生煤使用的许可证照，并自109年1月1日生效。</p>
-<p>李善植补充，依“<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A9%BA%E6%B1%A1%E6%B3%95.md">空污法</a>”一年内二次限期改善，仍继续违法，即属违规情节重大，必要时主管机关得废止操作许可或勒令歇业。此外，其展延许可证有效期间得缩减至未满三年。</p>
+<p>吴志超指出，环保局12月23日第三度查获中火超量使用生煤，已属违规情节重大，将再处900万元罚缓。此外，针对老旧的2号机与3号机，连续三次被查获违规，将依法废止其固定<ahref="https://github.com/eonzy298/djy/blob/master/gb/tag/%E6%B1%A1%E6%9F%93%E6%BA%90.md#1">污染源</a>操作及生煤使用的许可证照，并自109年1月1日生效。</p>
+<p>李善植补充，依“<ahref="https://github.com/eonzy298/djy/blob/master/gb/tag/%E7%A9%BA%E6%B1%A1%E6%B3%95.md#1">空污法</a>”一年内二次限期改善，仍继续违法，即属违规情节重大，必要时主管机关得废止操作许可或勒令歇业。此外，其展延许可证有效期间得缩减至未满三年。</p>
 <p>针对废照行动是否影响全国用电量？黄国玮指出，今年7月17日为今年全国用量最高峰，在中火停止二部机组（1号机与4号机）情况下，当日备转容量仍达10.08%，属“供电充裕”的绿灯；另外，8月20日中火当日用煤量最多，九部机组发电，备转容量甚至高达18%，证明废止中火二张许可证，仍可维持发电稳定度。</p>
 <p>因废照时机敏感，外界质疑恐涉选举？黄国玮强调，中火是市政议题、全国议题，更是健康与生活的议题，绝不是选举议题，改善空污是台中市民最在意的议题。</p>
 <p>至于台电若提出诉讼且胜诉，相关赔偿责任？李善植表示，行政救济是台电的权利，市府予以尊重，但会全力捍卫自治条例与地方自治权。环保局也强调，按诉愿法第93条规定，原行政处分执行，除法律另有规定外，不因提起诉愿而停止，呼吁台电遵守法律规定。</p>
@@ -20,40 +20,44 @@
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/12/25/n11744586.htm">中市闪废中火二机组许可证 台电启动行政救济</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11730644.htm">送爱到乌来关怀偏乡学童 台电点亮耶诞</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11730639.htm">台电台北北区营业处 寒冬送暖关怀长者</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/20/n11534359.htm">生煤管制挨批跳票  中市：空品9年来最好</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/11/n11512959.htm">维州一私营能源公司拟建垃圾处理发电厂</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/6/n11368554.htm">台电通霄发电厂发放奖助学金鼓励学子</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/13/n11109444.htm">苦胆：恶党正是污染源</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/11/n11104911.htm">侯友宜：谁制造治安污染源就让它停业</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/6/26/n10514163.htm">空污法三读通过 高雄推空品维护区</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743339.htm">川普：将和习近平签署美中贸易协议</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743273.htm">中国多地禁过圣诞 藉历史宣传“仇恨”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742305.htm">网文：央行钱印出来了 借钱的人没了</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733028.htm">以世运占星学解析中共政权的出生盘</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11729266.htm">2020年 这18个自由职业年薪过10万</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740044.htm">美军罕见公开生擒朝鲜领导人的演习画面</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740707.htm">【十字路口】川普弹劾案5大疑点 北京为何低调</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/17/n11661844.htm">【思想领袖】哪些因素威胁美国文化与繁荣（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738702.htm">哈孝远补办婚宴热闹 迎娶空姐美娇娘</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739135.htm">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738990.htm">指如今演艺工作式微 周润发有意退休后转行</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/18/6/26/n10514163.md#1">空污法三读通过 高雄推空品维护区</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/19/3/11/n11104911.md#1">侯友宜：谁制造治安污染源就让它停业</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/19/3/13/n11109444.md#1">苦胆：恶党正是污染源</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/19/7/6/n11368554.md#1">台电通霄发电厂发放奖助学金鼓励学子</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/19/9/11/n11512959.md#1">维州一私营能源公司拟建垃圾处理发电厂</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/19/9/20/n11534359.md#1">生煤管制挨批跳票  中市：空品9年来最好</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/19/12/18/n11730639.md#1">台电台北北区营业处 寒冬送暖关怀长者</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/19/12/18/n11730644.md#1">送爱到乌来关怀偏乡学童 台电点亮耶诞</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12217033.md#1">中市再杠中火违法   台电:循行政救济</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12213803.md#1">中火面临二度重罚  台电:今日空品良好</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/19/12/25/n11744586.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/29/n11829466.md#1" target="_blank">刘博：别让切尔诺贝利重演</a></li><li><a href="https://github.com/eonzy298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12213782.md#1">日籍染疫学生接触者全阴性 庄人祥：有2种可能</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12215877.md#1">中国多地降暴雨 宜昌严重内涝水淹城</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12214374.md#1">30万燕郊人像蝼蚁爬向北京 文章被删</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12215064.md#1">大陆洪灾 台商被令限期捐钱 不堪重负回台</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/4/15/n12033990.md#1">【思想领袖】巴斯：击垮中共 美可一招制胜</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/25/n12212204.md#1">周星驰对赌失败 抵押11亿豪宅周转资金</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/25/n12212762.md#1">开工巧遇周润发 邝洁楹激动到合照不知望镜头</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12214620.md#1">TWICE扮白雪公主与恶皇后 170cm子瑜演小矮人</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/25/n12212271.md#1">周星驰抵押豪宅传财困 御用配角黄一山回应</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12214760.md#1">郑敬基剪TVB工作证 吁同路艺人站港人一边</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/5/n12163931.md#1">【命理】48岁才起运的大器晚成之命</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/5/15/n12112533.md#1">违背原著的宝玉娶亲</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/5/23/n12131668.md#1">【康熙大帝】鳌拜犯上 君臣交锋</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/14/n12183964.md#1">【文史】古籍中多姿多彩的端午节粽</a></li>
+<li><a href="https://github.com/eonzy298/djy/blob/master/gb/20/5/23/n12131792.md#1">【康熙大帝】少年天子不动声色 智除鳌拜</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eonzy298/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eonzy298/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/25/n11744586.htm">中市闪废中火二机组许可证 台电启动行政救济</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/eonzy298/djy/blob/master/gb/19/12/25/n11744586.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eonzy298/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eonzy298/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eonzy298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eonzy298/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eonzy298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
